# JsonParser

./: .gitignore  CMakeLists.txt  README.md  build_package.py  fold_region.cpp  fold_region.h  gutter_widget.cpp  gutter_widget.h  installer.nsi  json_editor_widget.cpp  json_editor_widget.h  json_syntax_highlighter.cpp  json_syntax_highlighter.h  json_utils.cpp  json_utils.h  main.cpp  main_window.cpp  main_window.h  search_bar.cpp  search_bar.h  search_results_list.cpp  search_results_list.h  status_bar.cpp  status_bar.h  test.json
